# AIEngineeringW3V1

./: .gitignore
multi_agent_customer_support/: .env.example  .gitignore  README.md  pyproject.toml
multi_agent_customer_support/scripts/: load_dotenv_and_run.ps1
multi_agent_customer_support/servers/returns_service/: __init__.py  main.py
multi_agent_customer_support/servers/support_system_service/: __init__.py  main.py
multi_agent_customer_support/sql/: fix_rls_and_verify.sql  schema_and_seed.sql
multi_agent_customer_support/src/: __init__.py  gradio_app.py  main.py
multi_agent_customer_support/src/a2a/: __init__.py  support_system_a2a.py
multi_agent_customer_support/src/agents/: __init__.py  adk_runtime.py  billing_agent.py  customer_context.py  loop_agent.py  returns_remote_agent.py  router_agent.py  support_agent.py  tool_filter.py
multi_agent_customer_support/src/mcp/: __init__.py  python_mcp_server.py  supabase_client.py  supabase_mcp_connection.py  supabase_mcp_server.py
multi_agent_customer_support/tests/: __init__.py  test_eval_scenarios.py  test_returns_remote_agent.py  test_returns_service.py  test_router_fallback.py  test_scenarios.py  test_supabase_client.py
